--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "prettier": "prettier .prettierrc.json --write build/**/*.js",
-    "lint": "eslint .eslintrc build/**/*.js",
+    "prettier": "prettier .prettierrc.json --write src/**/*.ts",
+    "lint": "eslint   src/**/*.ts",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
     "start": "nodemon src/index.ts"
